--- a/base.css
+++ b/base.css
@@ -1,52 +1,43 @@
-/* まずは基本的な動きの */
+/* これが無いとモーダルウィンドウ表示の際に余白が出る */
+*{
+  margin: 0;
+  padding: 0;
+}
 
+/* モーダル全体(背景＋本体) */
+.modal{
+  display: none;
+  position: fixed;
+  top: 0;
+  height: 100vh;
+  width: 100%;
+}
 
+/* モーダル背景 */
+.modal-bg{
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.8);
+}
+
+/* モーダル本体 */
+.modal-content{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  overflow: scroll; /* はみ出た部分はスクロールさせる */
+  height: 60%;/* これが無いと「overflow:scroll」が利かない */
+  width: 60%;/* これが無いと「overflow:scroll」が利かない */
+  background: white;
+  padding: 40px;
+}
+
+/* モーダルウィンドウ表示中に記事本体を固定 */
 body.fixed {
 	position: fixed;
 	width: 100%;
 	height: 100%;
 	left: 0;
-}
-
-*{
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-.content{
-  margin: 0 auto;
-  padding: 40px;
-}
-
-/* モーダル本体 */
-.modal{
-  display: none;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-
-/* モーダルの背景 */
-.modal__bg{
-  background: rgba(0, 0, 0, 0.8);
-  height: 100vh;
-  position: absolute;
-  width: 100%;
-}
-
-/* モーダルの中身 */
-.modal__content{
-  height: 60%;/* スクロールに使う */
-  overflow-y: scroll; /* 高さを示したので、はみ出たら空くr－るできる */
-  width: 60%;
-  overflow-x: scroll; /* 高さを示したので、はみ出たら空くr－るできる */
-
-
-  background: white;
-  left: 50%;
-  padding: 40px;
-  position: absolute;
-  top: 50%;
-  transform: translate(-50%, -50%);
 }
